HU8 Test Adding